citas NOT WORKING!!

--- a/apache/static/index.html
+++ b/apache/static/index.html
@@ -34,7 +34,7 @@
                 .then(response => response.json())
                 .then(result => {
                     if (result.status=="OK"){
-                        location.href="juegos.html";
+                        location.href="pacientes.html";
                     } else {
                         document.getElementsByClassName("error")[0].style.display="block";
                     }
