--- a/apache/static/citas.html
+++ b/apache/static/citas.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EJEMPLO APP WEB CON CRUD</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    <link rel="stylesheet" href="style.css">
     <script>
         onload=function(){
             pedircitas();
@@ -17,7 +18,7 @@
                 tbody.innerHTML+=`<tr>
                      
                         <td>${cita.paciente_id}</td>
-                        <td>${cita.fecha_hora}</td>
+                        <td>${cita.fecha}</td>
                         <td>${cita.observaciones}</td>
                         <td>${cita.tratamiento}</td>
                         <td>${cita.costo}</td>
@@ -61,12 +62,12 @@
                         alert("cita eliminado")
                         pedircitas();
                     } else {
-                        alert("El cita no ha podido ser eliminado")
+                        alert("La cita no ha podido ser eliminada")
                     }
                 })
                 .catch(error => {
                     console.log('error', error);
-                    alert("Se ha producido un error y el cita no ha podido ser eliminado")
+                    alert("Se ha producido un error y la cita no ha podido ser eliminada")
                 });
         }
         function cerrarSesion(){
@@ -91,28 +92,18 @@
     </script>
 </head>
 <body>
-    <nav class="navbar is-warning" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <button class="navbar-burger is-warning button" aria-label="menu" aria-expanded="false"
-                data-target="navbarBasicExample">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-            </button>
-        </div>
-        <div class="navbar-menu">
-            <div class="navbar-start">
-                <a class="navbar-item" href="/pacientes.html">pacientes</a>
-                <a class="navbar-item" href="/subida.html">Archivos</a>
-                <a class="navbar-item" href="/citas.html">citas</a>
-                <a class="navbar-item" href="javascript:cerrarSesion()">Cerrar sesion</a>
-            </div>
-            <div class="navbar-end">
-                <div class="navbar-item">
+    <header class="header">
+        <a href="" class="logo"></a>
+        <nav class="barra" >
+                <div >
+                    <a  href="/pacientes.html">pacientes</a>
+                    <a  href="/subida.html">Archivos</a>
+                    <a  href="/citas.html">citas</a>
+                    <a href="javascript:cerrarSesion()">Cerrar sesion</a>
                 </div>
-            </div>
-        </div>
-    </nav>
+              
+        </nav>
+    </header>
     <section class="section">
         <div class="columns">
             <div class="column">
@@ -123,7 +114,7 @@
                         <tr>
                          <!--   <th>Imagen</th> -->
                             <th>paciente_id</th>
-                            <th>fecha_hora</th>
+                            <th>fecha</th>
                             <th>observaciones</th>
                             <th>tratamiento</th>
                             <th>costo</th>
