--- a/apache/static/editar_paciente.html
+++ b/apache/static/editar_paciente.html
@@ -70,6 +70,26 @@
                     alert("Se ha producido un error y el paciente no ha podido ser modificado")
                 });
         }
+        function cerrarSesion(){
+            var requestOptions = {
+                method: 'GET'
+            };
+            fetch("/api/logout", requestOptions)
+                .then(response => response.json())
+                .then(result => {
+                    if (result.status == "OK"){
+                        location.href="/index.html";
+                    } else {
+                        alert("No se ha podido cerrar sesión")
+                    }
+                })
+                .catch(error => {
+                    console.log('error', error);
+                    alert("Se ha producido un error y no se ha podido cerrar sesión")
+                });
+
+        }
+
     </script>
 </head>
 <body>
@@ -77,9 +97,9 @@
         <a href="" class="logo"></a>
         <nav class="barra" >
                 <div >
-                    <a  href="/pacientes.html">pacientes</a>
+                    <a  href="/pacientes.html">Pacientes</a>
+                    <a  href="/citas.html">Citas</a>
                     <a  href="/subida.html">Archivos</a>
-                    <a  href="/citas.html">citas</a>
                     <a href="javascript:cerrarSesion()">Cerrar sesion</a>
                 </div>
               
