--- a/apache/static/pacientes.html
+++ b/apache/static/pacientes.html
@@ -95,9 +95,9 @@
         <a href="" class="logo"></a>
         <nav class="barra" >
                 <div >
-                    <a  href="/pacientes.html">pacientes</a>
+                    <a  href="/pacientes.html">Pacientes</a>
+                    <a  href="/citas.html">Citas</a>
                     <a  href="/subida.html">Archivos</a>
-                    <a  href="/citas.html">citas</a>
                     <a href="javascript:cerrarSesion()">Cerrar sesion</a>
                 </div>
               
